--- a/scripts/install
+++ b/scripts/install
@@ -121,20 +121,20 @@ else
 	ynh_replace_string --match_string="__REGISTRATION__" --replace_string="false" --target_file="$local_conf"
 fi
 
-env_conf="$final_path/.env"
-# setup application config
-cp ../conf/.env.mysql $env_conf
-db_name=$(ynh_sanitize_dbid --db_name=$app)
-db_user=$db_name
-ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-ynh_mysql_setup_db  --db_user=$db_user --db_name=$db_name	
-ynh_replace_string  --match_string="__RANDOM_KEY__" --replace_string="$random_key" --target_file="$env_conf"
-ynh_replace_string  --match_string="__DOMAIN__" --replace_string="$domain" --target_file="$env_conf"
-ynh_replace_string  --match_string="__DB_PWD__" --replace_string="$db_pwd" --target_file="$env_conf"
-ynh_replace_string  --match_string="__DB_USER__" --replace_string="$db_name" --target_file="$env_conf"
-ynh_replace_string  --match_string="__DB_NAME__" --replace_string="$db_name" --target_file="$env_conf"
+# env_conf="$final_path/.env"
+# # setup application config
+# cp ../conf/.env.mysql $env_conf
+# db_name=$(ynh_sanitize_dbid --db_name=$app)
+# db_user=$db_name
+# ynh_app_setting_set --app=$app --key=db_name --value=$db_name
+# ynh_mysql_setup_db  --db_user=$db_user --db_name=$db_name	
+# ynh_replace_string  --match_string="__RANDOM_KEY__" --replace_string="$random_key" --target_file="$env_conf"
+# ynh_replace_string  --match_string="__DOMAIN__" --replace_string="$domain" --target_file="$env_conf"
+# ynh_replace_string  --match_string="__DB_PWD__" --replace_string="$db_pwd" --target_file="$env_conf"
+# ynh_replace_string  --match_string="__DB_USER__" --replace_string="$db_name" --target_file="$env_conf"
+# ynh_replace_string  --match_string="__DB_NAME__" --replace_string="$db_name" --target_file="$env_conf"
 
-#ynh_add_config --template="../conf/.env.mysql" --destination="$final_path/.env"
+ynh_add_config --template="../conf/.env.mysql" --destination="$final_path/.env"
 
 #=================================================
 # BUILD KIMAI2
@@ -155,7 +155,7 @@ ynh_script_progression --message="Storing the config file checksum..."
 
 # Calculate and store the config file checksum into the app settings
 ynh_store_file_checksum --file="$local_conf"
-ynh_store_file_checksum --file="$env_conf"
+#ynh_store_file_checksum --file="$env_conf"
 
 #=================================================
 # GENERIC FINALIZATION
