--- a/scripts/install
+++ b/scripts/install
@@ -56,7 +56,7 @@ ynh_app_setting_set --app=$app --key=update --value=$update
 #=================================================
 # CREATE DEDICATED USER
 #=================================================
-ynh_script_progression --message="Configuring system user..."
+ynh_script_progression --message="Configuring system user..." --weight=1
 
 # Create a system user
 ynh_system_user_create --username=$app --home_dir="$final_path"
@@ -105,9 +105,10 @@ ynh_add_fpm_config --usage=low --footprint=low --package="$extra_php_dependencie
 ynh_script_progression --message="Configuring Kimai2..." --weight=1
 
 local_conf="$final_path/config/packages/local.yaml"
+
 # Configure registration
 cp ../conf/local.yaml $local_conf
-ynh_replace_string      --match_string="__APP__" --replace_string="$app" --target_file="$local_conf"
+ynh_replace_string --match_string="__APP__" --replace_string="$app" --target_file="$local_conf"
 
 # Registration should be allowed or not 
 if [ $registration -eq 1  ]
@@ -116,19 +117,7 @@ then
 else
 	ynh_replace_string --match_string="__REGISTRATION__" --replace_string="false" --target_file="$local_conf"
 fi
-
-# env_conf="$final_path/.env"
-# # setup application config
-# cp ../conf/.env.mysql $env_conf
-# db_name=$(ynh_sanitize_dbid --db_name=$app)
-# db_user=$db_name
-# ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-# ynh_mysql_setup_db  --db_user=$db_user --db_name=$db_name	
-# ynh_replace_string  --match_string="__RANDOM_KEY__" --replace_string="$random_key" --target_file="$env_conf"
-# ynh_replace_string  --match_string="__DOMAIN__" --replace_string="$domain" --target_file="$env_conf"
-# ynh_replace_string  --match_string="__DB_PWD__" --replace_string="$db_pwd" --target_file="$env_conf"
-# ynh_replace_string  --match_string="__DB_USER__" --replace_string="$db_name" --target_file="$env_conf"
-# ynh_replace_string  --match_string="__DB_NAME__" --replace_string="$db_name" --target_file="$env_conf"
+ynh_store_file_checksum --file="$local_conf"
 
 ynh_add_config --template="../conf/.env.mysql" --destination="$final_path/.env"
 
@@ -143,15 +132,6 @@ ynh_composer_exec --phpversion="${YNH_PHP_VERSION}" --workdir="$final_path" --co
 pushd "$final_path"
 	php${YNH_PHP_VERSION} bin/console kimai:install -n
 popd
-
-#=================================================
-# STORE THE CONFIG FILE CHECKSUM
-#=================================================
-ynh_script_progression --message="Storing the config file checksum..." --weight=1
-
-# Calculate and store the config file checksum into the app settings
-ynh_store_file_checksum --file="$local_conf"
-#ynh_store_file_checksum --file="$env_conf"
 
 #=================================================
 # GENERIC FINALIZATION
